--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,33 +1,32 @@
-.App {
-  text-align: center;
+.wrapper {
+  position: relative;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
+.image {
+  max-width: 100%;
+  max-height: 100%;
+  height: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.text {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.text.title {
+  font-size: large;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.text.artist {
+  font-size: small;
 }
+
+.bg {
+  background-color: black;
+}
+
+.info-wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+/*# sourceMappingURL=App.css.map */
