--- a/src/css/App.css
+++ b/src/css/App.css
@@ -26,7 +26,34 @@
 
 .info-wrapper {
   position: absolute;
-  bottom: 0;
+  bottom: 20%;
   left: 0;
+}
+
+.progressbar-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: absolute;
+  width: 80%;
+  height: 10px;
+  margin: auto;
+  bottom: 10%;
+  left: 10%;
+}
+
+.progressbar-bg {
+  width: 100%;
+  height: 100%;
+  background-color: green;
+}
+
+.progressbar {
+  height: 100%;
+  background-color: white;
 }
 /*# sourceMappingURL=App.css.map */
