--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 .wrapper {
   position: relative;
 }
@@ -28,8 +32,15 @@
   position: absolute;
   width: 90%;
   margin: auto;
-  bottom: 10%;
+  bottom: 15%;
   left: 5%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .progressbar-wrapper {
