--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -1,5 +1,9 @@
 @charset "utf-8";
 
+body {
+    overflow: hidden;
+}
+
 .wrapper {
     position: relative;
 }
@@ -28,8 +32,10 @@
     position: absolute;
     width: 90%;
     margin: auto;
-    bottom: 10%;
-    left: 5%
+    bottom: 15%;
+    left: 5%;
+    display: flex;
+    flex-direction: column;
 }
 
 .progressbar-wrapper {
