--- a/src/css/App.css
+++ b/src/css/App.css
@@ -32,7 +32,7 @@ body {
   position: absolute;
   width: 90%;
   margin: auto;
-  bottom: 15%;
+  bottom: 7%;
   left: 5%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -51,7 +51,7 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  width: 80%;
+  width: 100%;
   height: 10px;
   margin: auto;
 }
@@ -60,18 +60,21 @@ body {
   width: 100%;
   height: 100%;
   background-color: green;
+  border-radius: 25px;
 }
 
 .progressbar {
   height: 100%;
   background-color: white;
+  border-radius: 25px;
 }
 
 .playback-wrapper {
-  width: 100%;
+  width: 80%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  margin: auto;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
@@ -79,5 +82,27 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+}
+
+[class*="playback-button"] {
+  background-color: #4CAF50;
+  /* Green */
+  border: none;
+  height: 25px;
+  width: 25px;
+  border-radius: 50%;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+}
+
+.playback-button-true {
+  color: white;
+  content: "\f132";
+  size: 16px;
+}
+
+.playback-button-false {
+  color: pink;
 }
 /*# sourceMappingURL=App.css.map */
