--- a/src/css/App.scss
+++ b/src/css/App.scss
@@ -32,7 +32,7 @@ body {
     position: absolute;
     width: 90%;
     margin: auto;
-    bottom: 15%;
+    bottom: 7%;
     left: 5%;
     display: flex;
     flex-direction: column;
@@ -41,7 +41,7 @@ body {
 .progressbar-wrapper {
     display: flex;
     flex-direction: row;
-    width: 80%;
+    width: 100%;
     height: 10px;
     margin: auto;
 }
@@ -50,16 +50,19 @@ body {
     width: 100%;
     height: 100%;
     background-color: green;
+    border-radius: 25px;
 }
 
 .progressbar {
     height: 100%;
     background-color: white;
+    border-radius: 25px;
 }
 
 .playback-wrapper {
-    width: 100%;
+    width: 80%;
     display: flex;
+    margin: auto;
     flex-direction: row;
     justify-content: space-between;
 }
